Listning av produkter klart

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -14,7 +14,7 @@ footer {
   justify-content: space-between
 }
 nav { position: relative; }
-#product-count {
+#cart-qty {
   position: absolute;
   top: 0.5em;
   left: -2em;
